Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68977

QListView with millions of items slow with keyboard scrolling

XMLWordPrintable

    • 43ed09fed59d55a8792fad87ef9a75382b5c60ff

      When a view has millions of elements, scrolling with the scrollbar is fast, however, scrolling by using up/down arrow is slow.

      This stackoverflow post is a very good summary of the bug: https://stackoverflow.com/questions/32449642/qlistview-with-millions-of-items-slow-with-keyboard

      This stackoverflow answer analyses the problem: https://stackoverflow.com/a/50904999/3336423

      The slow behavior was introduced by the fix of QTBUG-21804

        1. QTBUG-68977.zip
          4 kB
          Jean Porcherot
        2. main.cpp
          2 kB
          Christian Ehrlicher
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            jpo38 Jean Porcherot
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes