tests/benchmarks/widgets/itemviews/qlistview/qlistview.pro
@@ -1,0 +1,7 @@
+QT += widgets testlib
+
+TEMPLATE = app
+TARGET = tst_bench_qlistview
+
+SOURCES += tst_qlistview.cpp
+
